# Backend/models.py
@@ -1,7 +1,42 @@
 from datetime import datetime
-from config import db, ma
+from config import db, ma, app
+import time
+import jwt
 from flask_sqlalchemy import SQLAlchemy
+from werkzeug.security import generate_password_hash, check_password_hash
 
+class User(db.Model):
+    __tablename__ = "users"
+    id = db.Column(db.Integer, primary_key = True)
+    username = db.Column(db.String(32), index = True)
+    password_hash = db.Column(db.String(64))
+    is_admin = db.Column(db.Boolean, default=False, nullable=False)
+
+    def hash_password(self, password):
+        self.password_hash = generate_password_hash(password)
+
+    def verify_password(self, password):
+        return check_password_hash(self.password_hash, password)
+    
+    def generate_auth_token(self, expires_in = 600):
+        return jwt.encode(
+            { 'id': self.id, 'exp': time.time() + expires_in }, 
+            app.config['SECRET_KEY'], algorithm='HS256')
+
+    @staticmethod
+    def verify_auth_token(token):
+        try:
+            data = jwt.decode(token, app.config['SECRET_KEY'],
+            algorithm=['HS256'])
+        except:
+            return 
+        return User.query.get(data['id'])
+
+class UserSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = User
+        load_instance = True
+        sqla_session = db.session
 
 class Device(db.Model):
     __tablename__ = "device"
